--- a/src/app/office-principal/create-principal/create-principal.component.html
+++ b/src/app/office-principal/create-principal/create-principal.component.html
@@ -1,9 +1,8 @@
-
-<div class="overall" #customLoadingTemplate>
+<div class="overall">
     <div class="row w-100 d-flex justify-content-center align-items-center text-white" style="position: absolute; top: 20px; z-index:2; margin-left: 0px;">
         <div class="col-2"><i class="fa fa-chevron-left" aria-hidden="true" (click)="routeBack()"></i></div>
         <div class="col-8 text-center">
-            <h2 class="m-0">Add Student</h2>
+            <h3 class="m-0">Add Principal</h3>
         </div>
         <div class="col-2"></div>
     </div>
@@ -20,6 +19,7 @@
                         <label for="email">Email :</label>
                         <input type="email" formControlName="email"  name="email" class="form-control"  id="email">
                     </div>
+                    
                     <div class="inputBox mb-4">
                         <label for="pwd">Password :</label>
                         <input type="password"  name="pwd"  class="form-control" formControlName="password" id="pwd" >
@@ -43,4 +43,3 @@
 		</div>
 	</div>
 </div>
-<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate"></ngx-loading>
