--- a/src/app/office-principal/department/department.component.html
+++ b/src/app/office-principal/department/department.component.html
@@ -1,7 +1,7 @@
-<a  class="float" (click)="addDepartment()">
+<a  class="float" (click)="addDepartment()" *ngIf="user.role === 'admin'">
     <i class="fa fa-plus my-float"></i>
     </a>
-<div class="overall">
+<div class="overall" #customLoadingTemplate>
     <div class="row w-100 d-flex justify-content-center align-items-center text-white" style="position: absolute; top: 20px; z-index:2; margin-left: 0px;">
         <div class="col"><i class="fa fa-chevron-left" aria-hidden="true" (click)="routeBack()"></i></div>
         <div class="col text-center">
@@ -25,7 +25,7 @@
 				
 				<div class="drop__card" (click)="openSingleDepartment(department.data.name)">
 					<div class="drop__data">
-					  <img [src]="department.data.image" alt="no_image" class="drop__img">
+					  <img src="../../../assets/Saly-10.png" alt="no_image" class="drop__img">
 					  <div>
 						<h1 class="drop__name">{{department.data.name}}</h1>
 					  </div>
@@ -33,6 +33,6 @@
 				  </div>
 			</div>
 		</div>
-
 	</div>
 </div>
+<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate"></ngx-loading>
