--- a/src/app/office-principal/principal/principal.component.html
+++ b/src/app/office-principal/principal/principal.component.html
@@ -1,1 +1,46 @@
-<p>principal works!</p>
+<a  class="float" (click)="addPrincipal()" *ngIf="!hideAddBUtton && user.role ==='admin'">
+    <i class="fa fa-plus my-float"></i>
+    </a>
+<div class="page-content page-container" id="page-content">
+    <div >
+         <div class="row w-100 d-flex justify-content-center align-items-center text-white" style="position: absolute; top: 20px; z-index:2; margin-left: 0px;">
+        <div class="col"><i class="fa fa-chevron-left" aria-hidden="true" (click)="routeBack()"></i></div>
+        <div class="col text-center">
+            <h3 class="m-0">Principal</h3>
+        </div>
+        <div class="col"></div>
+    </div>
+        <div class="justify-content-center">
+            <div class="col-xl-6 col-md-12 col-sm-12">
+                <div class="card user-card-full">
+                    <div class="row">
+                        <div class="col-sm-4 bg-c-lite-green user-profile">
+                            <div class="card-block text-center text-white">
+                                <div class="m-b-25"> <img src="https://img.icons8.com/bubbles/100/000000/user.png" class="img-radius" alt="User-Profile-Image"> </div>
+                                <h2 class="f-w-600">{{userName}}</h2>
+                                <p>DigiInfo</p>
+                            </div>
+                        </div>
+                        <div class="col-sm-8">
+                            <div class="card-block">
+                                <h6 class="m-b-20 p-b-5 b-b-default f-w-600">Information</h6>
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Email</p>
+                                        <h6 class="text-muted f-w-400">{{userEmail}}</h6>
+                                    </div>
+                                </div> 
+                                <div class="row">
+                                    <div class="col-sm-6">
+                                        <p class="m-b-10 f-w-600">Mobile</p>
+                                        <h6 class="text-muted f-w-400">{{userMobile}}</h6>
+                                    </div>
+                                </div> 
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
