--- a/src/app/office-principal/department/department.component.html
+++ b/src/app/office-principal/department/department.component.html
@@ -12,16 +12,16 @@
 	<div class="wrapper">
 		<div class="card">
 			<div class="questionCard px-3">
-				<input type="search" name="" id="" placeholder="Search departments">
+				<input type="search" name="" id="" [(ngModel)]="searchText" placeholder="Search departments">
 			</div>
-            <!-- <div class="no-tem mt-3" *ngIf="departments.length === 0">
+            <div class="no-tem mt-3" *ngIf="departments.length === 0 && !loading">
                 <div class="content">
                   <img src="../assets/Saly-19.png" width="250">
-                  <p>No departments found. Create your first department.
+                  <p>No departments found.
                   </p>
                 </div>
-              </div> -->
-			<div class="px-lg-4 px-sm-2 px-md-2 container-fluid question"  *ngFor="let department of departments">
+              </div>
+			<div class="px-lg-4 px-sm-2 px-md-2 container-fluid question"  *ngFor="let department of departments | filter:searchText">
 				
 				<div class="drop__card" (click)="openSingleDepartment(department.data.name)">
 					<div class="drop__data">
