--- a/src/app/office-principal/templates/preview-template/preview-template.component.html
+++ b/src/app/office-principal/templates/preview-template/preview-template.component.html
@@ -1,5 +1,3 @@
 <ngx-doc-viewer
-  [url]="template.val.url"
-  viewer="google"
-  style="width:100%;height:50vh;"
+url="https://file-examples-com.github.io/uploads/2017/02/file-sample_100kB.docx" viewer="google"  style="width:100%;height:93vh;"
 ></ngx-doc-viewer>
