--- a/src/app/office-principal/users/users.component.html
+++ b/src/app/office-principal/users/users.component.html
@@ -1,7 +1,7 @@
 
-<a  class="float" (click)="addUser()" *ngIf="user.role === 'admin'">
+<!-- <a  class="float" (click)="addUser()" *ngIf="user.role === 'admin'">
     <i class="fa fa-plus my-float"></i>
-    </a>
+    </a> -->
 <div class="overall" #customLoadingTemplate>
     <div class="row w-100 d-flex justify-content-center align-items-center text-white" style="position: absolute; top: 20px; z-index:2; margin-left: 0px;">
         <div class="col"><i class="fa fa-chevron-left" aria-hidden="true" (click)="routeBack()"></i></div>
