--- a/src/app/office-principal/dashboard/dashboard.component.html
+++ b/src/app/office-principal/dashboard/dashboard.component.html
@@ -37,7 +37,7 @@
         </div>
     </div>
     <div class="row mt-2">
-        <div class="col-6">
+        <div class="col-6" *ngIf="user.role ==='admin'">
             <div class="box" (click)="route('principal')">
                 <i class="fa fa-university" aria-hidden="true"></i>
                 <span>Principal</span>
