--- a/src/app/office-principal/templates/create-templates/create-templates.component.html
+++ b/src/app/office-principal/templates/create-templates/create-templates.component.html
@@ -29,7 +29,7 @@
 
                     <div class="inputBox mb-4">
                         <input type="submit" class="btn btn-default btn-block" value="Submit" 
-                        (click)="exportHTML()">
+                        (click)="upload()">
                     </div>
                 </div>
 			</div>
