--- a/src/app/user/profile/profile.component.html
+++ b/src/app/user/profile/profile.component.html
@@ -26,18 +26,18 @@
                                         <p class="m-b-10 f-w-600">Email</p>
                                         <h6 class="text-muted f-w-400">{{userEmail}}</h6>
                                     </div>
-                                    <!-- <div class="col-sm-6">
+                                    <div class="col-sm-6">
                                         <p class="m-b-10 f-w-600">Phone</p>
-                                        <h6 class="text-muted f-w-400">98979989898</h6>
-                                    </div> -->
+                                        <h6 class="text-muted f-w-400">{{userMobile}}</h6>
+                                    </div>
                                 </div>
                                 <h6 class="m-b-20 m-t-40 p-b-5 b-b-default f-w-600">Settings</h6>
                                 <div class="row">
-                                    <!-- <div class="col-6">
+                                    <div class="col-6" *ngIf="User.role === 'principal'">
                                         <button class="btn btn-primary">
                                             Edit profile
                                         </button>
-                                    </div> -->
+                                    </div>
                                     <div class="col-6">
                                         <button class="btn btn-primary" (click)="logout()">
                                             Logout
