--- a/src/app/office-principal/dashboard/dashboard.component.css
+++ b/src/app/office-principal/dashboard/dashboard.component.css
@@ -17,6 +17,9 @@
 .fa-chevron-left{
   font-size: 20px !important;
 }
+.col-6{
+  margin: 10px 0px 10px 0px;
+}
 span{
     font-size: large !important;
     margin-top: 3px;
