--- a/src/app/office-principal/users/single-user/single-user.component.html
+++ b/src/app/office-principal/users/single-user/single-user.component.html
@@ -1,30 +1,41 @@
 <div class="overall">
-    
-<div class="container-fluid">
-    <div class="row my-4 text-white d-flex justify-content-center align-items-center">
+        <div class="row w-100 my-4 text-white d-flex justify-content-center align-items-center" style="position: absolute; top: 20px; z-index:2; margin-left: 0px;">
         <div class="col"><i class="fa fa-chevron-left" aria-hidden="true" (click)="routeBack()"></i></div>
         <div class="col text-center">
-            <h1 class="m-0">{{userName}}</h1>
+            <h1 class="m-0">{{User.displayName}}</h1>
         </div>
         <div class="col"></div>
     </div>
-    <div class="wrapper p-3">
+        <div class="card">
+            <div class="questionCard px-3">
+				<div class="loginWrapper p-1">
         <div class="inputBox mb-4">
             <label for="fname">Username</label>
-            <input type="text"  name="fname" class="form-control" [(ngModel)]="userName" id="fname">
+            <input type="text"  name="fname" class="form-control" [(ngModel)]="User.displayName" id="fname" [disabled]="!showCase">
         </div>
         <div class="inputBox mb-4">
             <label for="email">Email</label>
-            <input type="email" autocomplete="off" name="email" [(ngModel)]="userEmail" class="form-control" id="email">
+            <input type="email" autocomplete="off" name="email" [(ngModel)]="User.email" class="form-control" id="email" [disabled]="!showCase">
         </div>
         <div class="inputBox mb-4">
-            <label for="role">Role</label>
-            <input type="text" autocomplete="off" name="role" [(ngModel)]="userRole" class="form-control" id="role">
+            <label for="role">Mobile Number</label>
+            <input type="text" autocomplete="off" name="role" [(ngModel)]="User.mobilenumber" class="form-control" id="role" [disabled]="!showCase">
         </div>
-        <div class="inputBox my-4">
-            <input type="submit" class="btn btn-default btn-block" value=" &#xf044; &ensp; Edit" *ngIf="!showCase" (click)="editUser()">
-            <input type="submit" class="btn btn-default btn-block" value=" &#xf0ee; &ensp; Update" *ngIf="showCase" (click)="updateUser()">
+        <div class="row">
+            <div class="col">
+                <div class="inputBox my-4">
+                    <input type="submit" class="btn btn-default btn-block" value=" &#xf044; &ensp; Edit" *ngIf="!showCase" (click)="editUser()">
+                    <input type="submit" class="btn btn-default btn-block" value=" &#xf0ee; &ensp; Update" *ngIf="showCase" (click)="updateUser()">
+                </div>
+                
+            </div>
+            <div class="col">
+                <div class="inputBox my-4">
+                    <input type="submit" class="btn btn-danger btn-block" value=" &#xf1f8; &ensp; Delete" (click)="deleteUser()">
+                </div>
+            </div>
         </div>
-    </div>
 </div>
+</div>
+    </div>
 </div>
