--- a/src/styles.css
+++ b/src/styles.css
@@ -32,6 +32,7 @@
     font-family: 'Mulish', sans-serif !important;
     background-size: cover;
     height: 100%;
+    overflow-x:hidden;
     background: white;
     background-position: center;
     /* background-image: url(https://4kwallpapers.com/images/wallpapers/macos-big-sur-apple-layers-fluidic-colorful-dark-wwdc-2020-5120x2880-1432.jpg); */
