--- a/src/app/office-principal/templates/create-templates/create-templates.component.css
+++ b/src/app/office-principal/templates/create-templates/create-templates.component.css
@@ -1,6 +1,6 @@
 .overall {
     width: 100vw;
-    height: 100vh;  
+    height: 100%;  
     margin: 0 auto; 
    overflow-x: hidden;
     background: linear-gradient(
