--- a/src/app/office-principal/templates/create-templates/create-templates.component.html
+++ b/src/app/office-principal/templates/create-templates/create-templates.component.html
@@ -1,5 +1,5 @@
 
-<div class="overall" #customLoadingTemplate>
+<div class="overall">
     <div class="row w-100 d-flex justify-content-center align-items-center text-white" style="position: absolute; top: 20px; z-index:2; margin-left: 0px;">
         <div class="col-2"><i class="fa fa-chevron-left" aria-hidden="true" (click)="routeBack()"></i></div>
         <div class="col-8 text-center">
@@ -37,4 +37,3 @@
 		</div>
 	</div>
 </div>
-<ngx-loading [show]="loading" [config]="{ backdropBorderRadius: '3px' }" [template]="customLoadingTemplate"></ngx-loading>
