--- a/src/app/office-principal/templates/preview-template/preview-template.component.html
+++ b/src/app/office-principal/templates/preview-template/preview-template.component.html
@@ -5,9 +5,9 @@
     </div>
     <div class="col"></div>
 </div>
-<ngx-doc-viewer
+<!-- <ngx-doc-viewer
 [url]="template.url" viewer="google"  style="width:100%;height:73vh;"
-></ngx-doc-viewer>
+></ngx-doc-viewer> -->
 <div [hidden]="template.waitingForApproval">
 <div class="row" *ngIf="user.role === 'admin' || user.role ==='a-hod'">
     <div class="col">
